--- a/dairy.html
+++ b/dairy.html
@@ -12,25 +12,324 @@
     <div class="headBox">
         <h1 style="color: white">电影分享</h1>
         <ul class="nav">
-            <li><a href="" style="color: aqua;">网站首页</a>
-                <a href="">影片分享</a>
-                <a href="">观影心得</a>
-                <a href="">留言</a>
-                <a href="">关于我</a>
+            <li><a href="" style="color: #00c1de;">网站首页</a>
+                <a href="./dairy.html">个人博客日记</a>
+                <a href="">网站制作</a>
+                <a href="">设计心得</a>
+                <a href="./time.html">时间轴</a>
+                <a href="">博客导航</a>
+                <a href="./message.html">留言</a>
             </li>
         </ul>
-        <div class="search"></div>
+        <div class="search">
+            <a href="">
+                <img src="./image/search.png" alt="">
+            </a>
+        </div>
     </div>
 </div>
 <!--box-->
-<div>
+<div class="box">
+<!--    boxLeft-->
     <div class="boxLeft">
-    </div>
+        <div class="leftTop">
+            <span class="draw">
+                <img src="./image/21.jpg" alt="">
+            </span>
+            <div class="topWord">
+                <h2>个人博客日记</h2>
+                <p> 个人博客日记，记录一些优秀个人站长是如何制作个人博客，
+                    建个人博客、以及经营个人网站的，本站还会推荐一些优秀的个人博客站长网站。</p>
+            </div>
+        </div>
+        <div class="newEassy">
 
+            <div class="title">最新博文</div>
+            <div class="eassyL">
+                <ul>
+                    <li class="essay">
+                        <div class="eassyT">
+                            <a  href="">
+                                <b>【顶】</b>
+                                <p>别让这些闹心的套路，毁了你的网页设计!</p>
+                            </a>
+                        </div>
+
+                        <div class="eassyB" style="overflow:hidden;">
+                            <div class="eassyDraw">
+                                <img src="./image/7.jpg" alt="">
+                            </div>
+                            <div class="eassytText">
+                                <p>就拿我自己来说吧，有时候会很矛盾，设计好的作品，不把它分享出来，会觉得待在自己电脑里面实在是没有意义。干脆就发布出去吧。
+                                    我也害怕收到大家不好的评论，有些评论，可能说者无意，但是对于每一个用心的站长来说，都会受很深</p>
+                            </div>
+                            <span  class="titleP">
+                                       <a href="">
+                                           <img src="./image/20.jpg" alt="">
+                                       </a>
+                                   </span>
+
+                            <div class="time">
+                                <p>2019-05-14</p>
+                            </div>
+                            <span class="design">【设计心得】</span>
+                            <div class="eassyRead">
+                                <p>阅读更多</p>
+                            </div>
+
+                        </div>
+
+                    </li>
+                    <div class="eassyS"></div>
+                    <li class="essay">
+                        <div class="eassyT">
+                            <a  href="">
+                                <b>【顶】</b>
+                                <p>别让这些闹心的套路，毁了你的网页设计!</p>
+                            </a>
+                        </div>
+
+                        <div class="eassyB" style="overflow:hidden;">
+                            <div class="eassyDraw">
+                                <img src="./image/10.png" alt="">
+                            </div>
+                            <div class="eassytText">
+                                <p>就拿我自己来说吧，有时候会很矛盾，设计好的作品，不把它分享出来，会觉得待在自己电脑里面实在是没有意义。干脆就发布出去吧。
+                                    我也害怕收到大家不好的评论，有些评论，可能说者无意，但是对于每一个用心的站长来说，都会受很深</p>
+                            </div>
+                            <span  class="titleP">
+                                       <a href="">
+                                           <img src="./image/20.jpg" alt="">
+                                       </a>
+                                   </span>
+
+                            <div class="time">
+                                <p>2019-05-14</p>
+                            </div>
+                            <span class="design">【设计心得】</span>
+                            <div class="eassyRead">
+                                <p>阅读更多</p>
+                            </div>
+
+                        </div>
+
+                    </li>
+                    <div class="eassyS"></div>
+                    <li class="essay">
+                        <div class="eassyT">
+                            <a  href="">
+                                <b>【顶】</b>
+                                <p>别让这些闹心的套路，毁了你的网页设计!</p>
+                            </a>
+                        </div>
+
+                        <div class="eassyB" style="overflow:hidden;">
+                            <div class="eassyDraw">
+                                <img src="./image/5.jpg" alt="">
+                            </div>
+                            <div class="eassytText">
+                                <p>就拿我自己来说吧，有时候会很矛盾，设计好的作品，不把它分享出来，会觉得待在自己电脑里面实在是没有意义。干脆就发布出去吧。
+                                    我也害怕收到大家不好的评论，有些评论，可能说者无意，但是对于每一个用心的站长来说，都会受很深</p>
+                            </div>
+                            <span  class="titleP">
+                                       <a href="">
+                                           <img src="./image/20.jpg" alt="">
+                                       </a>
+                                   </span>
+
+                            <div class="time">
+                                <p>2019-05-14</p>
+                            </div>
+                            <span class="design">【设计心得】</span>
+                            <div class="eassyRead">
+                                <p>阅读更多</p>
+                            </div>
+
+                    </li>
+                    <div class="eassyS"></div>
+                    <li class="essay">
+                        <div class="eassyT">
+                            <a  href="">
+                                <b>【顶】</b>
+                                <p>别让这些闹心的套路，毁了你的网页设计!</p>
+                            </a>
+                        </div>
+
+                        <div class="eassyB" style="overflow:hidden;">
+                            <div class="eassyDraw">
+                                <img src="./image/4.jpg" alt="">
+                            </div>
+                            <div class="eassytText">
+                                <p>就拿我自己来说吧，有时候会很矛盾，设计好的作品，不把它分享出来，会觉得待在自己电脑里面实在是没有意义。干脆就发布出去吧。
+                                    我也害怕收到大家不好的评论，有些评论，可能说者无意，但是对于每一个用心的站长来说，都会受很深</p>
+                            </div>
+                            <span  class="titleP">
+                                       <a href="">
+                                           <img src="./image/20.jpg" alt="">
+                                       </a>
+                                   </span>
+
+                            <div class="time">
+                                <p>2019-05-14</p>
+                            </div>
+                            <span class="design">【设计心得】</span>
+                            <div class="eassyRead">
+                                <p>阅读更多</p>
+                            </div>
+
+                        </div>
+
+                    </li>
+                    <div class="eassyS"></div>
+                    <li class="essay">
+                        <div class="eassyT">
+                            <a  href="">
+                                <b>【顶】</b>
+                                <p>别让这些闹心的套路，毁了你的网页设计!</p>
+                            </a>
+                        </div>
+
+                        <div class="eassyB" style="overflow:hidden;">
+                            <div class="eassyDraw">
+                                <img src="./image/6.jpg" alt="">
+                            </div>
+                            <div class="eassytText">
+                                <p>就拿我自己来说吧，有时候会很矛盾，设计好的作品，不把它分享出来，会觉得待在自己电脑里面实在是没有意义。干脆就发布出去吧。
+                                    我也害怕收到大家不好的评论，有些评论，可能说者无意，但是对于每一个用心的站长来说，都会受很深</p>
+                            </div>
+                            <span  class="titleP">
+                                       <a href="">
+                                           <img src="./image/20.jpg" alt="">
+                                       </a>
+                                   </span>
+
+                            <div class="time">
+                                <p>2019-05-14</p>
+                            </div>
+                            <span class="design">【设计心得】</span>
+                            <div class="eassyRead">
+                                <p>阅读更多</p>
+                            </div>
+
+                    </li>
+                    <div class="eassyS"></div>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+<!--boxRight-->
     <div class="boxRight">
+        <div class="slide">
+            <ul class="title">
+                <li><a>点击排行</a></li>
+            </ul>
+            <div class="updateList">
+                <a href=""><img src="./image/6.jpg" alt=""></a>
+                <ul class="sildedarwL">
+                    <li>十条设计原则教你学会如何设计网页布局!</li>
+                    <li>十条设计原则教你学会如何设计网页布局!</li>
+                    <li>十条设计原则教你学会如何设计网页布局!</li>
+                    <li>十条设计原则教你学会如何设计网页布局!</li>
+                    <li>十条设计原则教你学会如何设计网页布局!</li>
+                    <li>十条设计原则教你学会如何设计网页布局!</li>
+                </ul>
+            </div>
+
+        </div>
+        <div class="slide" style="margin-top: 20px">
+            <div class="title">本栏推荐 </div>
+            <div class="recommendDarw">
+                <a href="">
+                    <img src="./image/7.jpg" alt="">
+                </a>
+            </div>
+            <div class="recommendDarwList">
+                <ul>
+                    <li>
+                        <div class="recommendDarwList_1">
+                            <div class="recommendD">
+                                <a href=""><img src="./image/8.jpg" alt=""></a>
+                            </div>
+                            <div class="recommendtext">
+                                <a href="">
+                                    <p>十条设计原则教你学会如何设计网页布局!</p>
+                                </a>
+                            </div>
+                        </div>
+
+                    </li>
+
+                </ul>
+            </div>
+
+        </div>
+        <div class="slide" style="margin-top: 20px">
+            <div class="information_1">
+                <a href="">
+                    <img src="./image/12.png" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="slide"  style="margin-top: 20px">
+            <ul class="title">
+                <li><a>猜你喜欢</a></li>
+            </ul>
+            <ul class="like">
+                <ul>
+                    <li>建站流程篇——教你如何快速学会做网站</li>
+                    <li>遇见一个未知的你</li>
+                    <li>即便是坑，我也想要拉你入伙！</li>
+                    <li>个人博客用帝国cms 自定义页面 灵动标签调用网站所有信息</li>
+                    <li>CSS3 Maker 在线生成代码</li>
+                    <li>作为一个设计师,如果遭到质疑你是否能恪守自己的原则?</li>
+                    <li>【个人博客空间申请】金牛云服，免费领空间啦</li>
+                    <li>双十一，阿里云特惠活动，快来领券啦</li>
+                    <li>第二届 优秀个人博客模板比赛参选活动</li>
+                    <li>为什么说10月24日是程序员的节日？</li>
+                </ul>
+            </ul>
+        </div>
+        <div class="slide" style="margin-top: 20px">
+            <div class="information_1">
+                <a href="">
+                    <img src="./image/13.png" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="slide" style="margin-top:20px">
+            <ul class="title">
+                <li><a>站点信息</a></li>
+            </ul>
+            <ul class="xinxi">
+                <li><b>建站时间</b>：2018-10-24</li>
+                <li><b>网站程序</b>：帝国CMS7.5</li>
+                <li><b>主题模板</b>: <a href="">《今夕何夕》</a></li>
+                <li><b>文章统计</b>: 31篇文章</li>
+                <li><b>标签管理</b>: <a href="">标签云</a></li>
+                <li><b>统计数据</b>: <a href="">百度统计</a></li>
+                <li><b>微信公众号</b>: 扫描二维码，关注我们</li>
+                <li><a href=""><img src="./image/north.jpg" alt=""></a></li>
+            </ul>
+
+        </div>
     </div>
 
 </div>
+<div class="bottom">
+    <div class="top">
+    </div>
+    <span class="pic">
+           <img src="./image/north.jpg" alt="">
+       </span>
+    <span class="word">
+           <h2>站点声明：</h2>
+           <p>所有文章未经授权禁止转载、摘编、复制或建立镜像，如有违反，追究法律责任。</p>
+           <p>所有文章未经授权禁止转载、摘编、复制或建立镜像，如有违反，追究法律责任。</p>
+           <p>所有文章未经授权禁止转载、摘编、复制或建立镜像，如有违反，追究法律责任。</p>
+    </span>
+</div>
+
 
 </body>
 </html>
