--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
           <h1 style="color: white">个人博客</h1>
           <ul class="nav">
               <li><a href="" style="color: #00c1de;">网站首页</a>
-                  <a href="">个人博客日记</a>
+                  <a href="./dairy.html">个人博客日记</a>
                   <a href="">网站制作</a>
                   <a href="">设计心得</a>
-                  <a href="">时间轴</a>
+                  <a href="./time.html">时间轴</a>
                   <a href="">博客导航</a>
-                  <a href="">留言</a>
+                  <a href="./message.html">留言</a>
               </li>
           </ul>
           <div class="search">
@@ -241,7 +241,7 @@
                                    </div>
                                    <span  class="titleP">
                                        <a href="">
-                                           <img src="./image/20.jpg" alt="">
+                                           <img src="./image/21.png" alt="">
                                        </a>
                                    </span>
 
