--- a/time.html
+++ b/time.html
@@ -11,7 +11,7 @@
     <div class="headBox">
         <h1 style="color: white">个人博客</h1>
         <ul class="nav">
-            <li><a href="" style="color: #00c1de;">网站首页</a>
+            <li><a href="./index.html" style="color: #00c1de;">网站首页</a>
                 <a href="./dairy.html">个人博客日记</a>
                 <a href="">网站制作</a>
                 <a href="">设计心得</a>
