--- a/dairy.html
+++ b/dairy.html
@@ -49,7 +49,7 @@
                 <ul>
                     <li class="essay">
                         <div class="eassyT">
-                            <a  href="">
+                            <a  href="./smell.html">
                                 <b>【顶】</b>
                                 <p>别让这些闹心的套路，毁了你的网页设计!</p>
                             </a>
@@ -83,7 +83,7 @@
                     <div class="eassyS"></div>
                     <li class="essay">
                         <div class="eassyT">
-                            <a  href="">
+                            <a  href="./smell.html">
                                 <b>【顶】</b>
                                 <p>别让这些闹心的套路，毁了你的网页设计!</p>
                             </a>
@@ -117,7 +117,7 @@
                     <div class="eassyS"></div>
                     <li class="essay">
                         <div class="eassyT">
-                            <a  href="">
+                            <a  href="./smell.html">
                                 <b>【顶】</b>
                                 <p>别让这些闹心的套路，毁了你的网页设计!</p>
                             </a>
@@ -149,7 +149,7 @@
                     <div class="eassyS"></div>
                     <li class="essay">
                         <div class="eassyT">
-                            <a  href="">
+                            <a  href="./smell.html">
                                 <b>【顶】</b>
                                 <p>别让这些闹心的套路，毁了你的网页设计!</p>
                             </a>
@@ -183,7 +183,7 @@
                     <div class="eassyS"></div>
                     <li class="essay">
                         <div class="eassyT">
-                            <a  href="">
+                            <a  href="./smell.html">
                                 <b>【顶】</b>
                                 <p>别让这些闹心的套路，毁了你的网页设计!</p>
                             </a>
@@ -270,6 +270,15 @@
                     <img src="./image/12.png" alt="">
                 </a>
             </div>
+        </div>
+        <div class="slide" style="margin-top: 20px">
+            <div class="title">标签云</div>
+            <span class="tag" style="background-color: #36d681">金牛云服</span>
+            <span class="tag" style="background-color: blueviolet">设计</span>
+            <span class="tag" style="background-color: green">个人博客</span>
+            <span class="tag" style="background-color: darkred">空间</span>
+            <span class="tag" style="background-color: brown">网站制作</span>
+            <span class="tag" style="background-color: indianred">今夕何夕</span>
         </div>
         <div class="slide"  style="margin-top: 20px">
             <ul class="title">
