--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@
                  <ul>
                      <li style="height: 90px;width: 568px;background-color: #f7f7f7">
 
-                             <span>安静的做一个爱设计的女子</span>
-                             <p>自从入了这行，很多人跟我说可以做网络教程，我也有考虑，但最终没有实现，因为我觉得在这个教程泛滥的时代，直接做一套免费的原创个人博客模板更为实在。</p>
+                             <h2 class="hot">安静的做一个爱设计的女子</h2>
+                             <p>自从入了这行，很多人跟我说可以做网络教程，我也有考虑，但最终没有实现，因为我觉得在这个教程泛滥的时代，直接做一套免费的原创个人博客模板更为实在。每当看到自己喜欢的配色图片</p>
 
                      </li>
-                     <li><span>安静的做一个爱设计的女子</span></li>
-                     <li><span>安静的做一个爱设计的女子</span></li>
-                     <li><span>安静的做一个爱设计的女子</span></li>
-                     <li><span>安静的做一个爱设计的女子</span></li>
+                     <li><h2>安静的做一个爱设计的女子</h2></li>
+                     <li><h2>安静的做一个爱设计的女子</h2></li>
+                     <li><h2>安静的做一个爱设计的女子</h2></li>
+                     <li><h2>安静的做一个爱设计的女子</h2></li>
                  </ul>
              </div>
          </div>
@@ -241,7 +241,7 @@
                                    </div>
                                    <span  class="titleP">
                                        <a href="">
-                                           <img src="./image/21.png" alt="">
+                                           <img src="./image/20.jpg" alt="">
                                        </a>
                                    </span>
 
