--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="./css/index.css">
+    <script src="js/index.js"></script>
+    <script src="js/animate.js"></script>
 </head>
 <body>
 <!--head-->
    <div class="head">
       <div class="headBox">
-          <h1 style="color: white">个人博客</h1>
+          <h1 id ="box" style="color: white">个人博客</h1>
           <ul class="nav">
               <li><a href="./index.html" style="color: #00c1de;">网站首页</a>
                   <a href="./dairy.html">个人博客日记</a>
@@ -35,10 +37,13 @@
                  <img src="./image/1.jpg" alt="">
              </a></li>
              <li><a href="">
-                 <img src="./image/1.jpg" alt="">
+                 <img src="./image/2.png" alt="">
              </a></li>
              <li><a href="">
-                 <img src="./image/1.jpg" alt="">
+                 <img src="./image/3.jpg" alt="">
+             </a></li>
+             <li><a href="">
+                 <img src="./image/4.jpg" alt="">
              </a></li>
          </ul>
          <div>
@@ -47,7 +52,7 @@
              </div>
              <div class="rightBnt"></div>
          </div>
-         <div class="bntList">
+         <div  class="bntList">
              <span></span>
              <span></span>
              <span></span>
@@ -92,11 +97,11 @@
    <div class="diary">
      <div class="message">
          <ul  class="messageList" >
-             <li style="margin-right: 12px"><a>个人博客日记</a></li>
-             <li><a>CSS3|Html5</a></li>
-             <li><a>网站建设</a></li>
-             <li><a>推荐工具</a></li>
-             <li><a>设计心得</a></li>
+             <li style="margin-right: 12px"><a href="javaScript:;">个人博客日记</a></li>
+             <li><a href="javaScript:;">CSS3|Html5</a></li>
+             <li><a href="javaScript:;">网站建设</a></li>
+             <li><a href="javaScript:;">推荐工具</a></li>
+             <li><a href="javaScript:;">设计心得</a></li>
          </ul>
          <div class="tab">
              <div class="tabImage">
@@ -116,20 +121,22 @@
                      </li>
                  </ul>
              </div>
-             <div class="tabList">
-                 <ul>
-                     <li style="height: 90px;width: 568px;background-color: #f7f7f7">
+                  <ul class="tabList">
+                     <li class="hot" >
 
-                             <h2 class="hot">安静的做一个爱设计的女子</h2>
+                             <h2 >安静的做一个爱设计的女子</h2>
                              <p>自从入了这行，很多人跟我说可以做网络教程，我也有考虑，但最终没有实现，因为我觉得在这个教程泛滥的时代，直接做一套免费的原创个人博客模板更为实在。每当看到自己喜欢的配色图片</p>
 
                      </li>
-                     <li><h2>安静的做一个爱设计的女子</h2></li>
-                     <li><h2>安静的做一个爱设计的女子</h2></li>
-                     <li><h2>安静的做一个爱设计的女子</h2></li>
-                     <li><h2>安静的做一个爱设计的女子</h2></li>
+                     <li><h2>安静的做一个爱设计的女子</h2>
+                         <p>自从入了这行，很多人跟我说可以做网络教程，我也有考虑，但最终没有实现，因为我觉得在这个教程泛滥的时代，直接做一套免费的原创个人博客模板更为实在。每当看到自己喜欢的配色图片</p></li>
+                     <li><h2>安静的做一个爱设计的女子</h2>
+                         <p>自从入了这行，很多人跟我说可以做网络教程，我也有考虑，但最终没有实现，因为我觉得在这个教程泛滥的时代，直接做一套免费的原创个人博客模板更为实在。每当看到自己喜欢的配色图片</p></li>
+                     <li><h2>安静的做一个爱设计的女子</h2>
+                         <p>自从入了这行，很多人跟我说可以做网络教程，我也有考虑，但最终没有实现，因为我觉得在这个教程泛滥的时代，直接做一套免费的原创个人博客模板更为实在。每当看到自己喜欢的配色图片</p></li>
+                     <li><h2>安静的做一个爱设计的女子</h2>
+                         <p>自从入了这行，很多人跟我说可以做网络教程，我也有考虑，但最终没有实现，因为我觉得在这个教程泛滥的时代，直接做一套免费的原创个人博客模板更为实在。每当看到自己喜欢的配色图片</p></li>
                  </ul>
-             </div>
          </div>
    </div>
      <div class="slide">
