--- a/index.html
+++ b/index.html
@@ -48,12 +48,15 @@
          </ul>
          <div>
              <div class="LeftBnt">
-                 <img src="" alt="">
+                 <img src="http://jxhx2.yangqq.com/skin/jxhx/images/left.png" alt="">
              </div>
-             <div class="rightBnt"></div>
+             <div class="rightBnt">
+                 <img src="http://jxhx2.yangqq.com/skin/jxhx/images/right.png" alt="">
+             </div>
          </div>
          <div  class="bntList">
-             <span></span>
+<!--             <span class="hot"></span>-->
+             <span class="hot"></span>
              <span></span>
              <span></span>
              <span></span>
@@ -240,7 +243,7 @@
 
                                <div class="eassyB" style="overflow:hidden;">
                                    <div class="eassyDraw">
-                                       <img src="./image/7.jpg" alt="">
+                                       <img  aa="./image/7.jpg" alt=""  class="lazyload">
                                    </div>
                                    <div class="eassytText">
                                        <p>就拿我自己来说吧，有时候会很矛盾，设计好的作品，不把它分享出来，会觉得待在自己电脑里面实在是没有意义。干脆就发布出去吧。
@@ -274,7 +277,7 @@
 
                            <div class="eassyB" style="overflow:hidden;">
                                <div class="eassyDraw">
-                                   <img src="./image/10.png" alt="">
+                                   <img aa="./image/10.png" class="lazyload" alt="">
                                </div>
                                <div class="eassytText">
                                    <p>就拿我自己来说吧，有时候会很矛盾，设计好的作品，不把它分享出来，会觉得待在自己电脑里面实在是没有意义。干脆就发布出去吧。
@@ -308,7 +311,7 @@
 
                            <div class="eassyB" style="overflow:hidden;">
                                <div class="eassyDraw">
-                                   <img src="./image/5.jpg" alt="">
+                                   <img aa="./image/10.png" class="lazyload" alt="">
                                </div>
                                <div class="eassytText">
                                    <p>就拿我自己来说吧，有时候会很矛盾，设计好的作品，不把它分享出来，会觉得待在自己电脑里面实在是没有意义。干脆就发布出去吧。
@@ -327,6 +330,40 @@
                                <div class="eassyRead">
                                    <p>阅读更多</p>
                                </div>
+
+                           </div></li>
+                       <div class="eassyS"></div>
+                       <li class="essay">
+                           <div class="eassyT">
+                               <a  href="">
+                                   <b>【顶】</b>
+                                   <p>别让这些闹心的套路，毁了你的网页设计!</p>
+                               </a>
+                           </div>
+
+                           <div class="eassyB" style="overflow:hidden;">
+                               <div class="eassyDraw">
+                                   <img aa="./image/10.png" class="lazyload" alt="">
+                               </div>
+                               <div class="eassytText">
+                                   <p>就拿我自己来说吧，有时候会很矛盾，设计好的作品，不把它分享出来，会觉得待在自己电脑里面实在是没有意义。干脆就发布出去吧。
+                                       我也害怕收到大家不好的评论，有些评论，可能说者无意，但是对于每一个用心的站长来说，都会受很深</p>
+                               </div>
+                               <span  class="titleP">
+                                       <a href="">
+                                           <img src="./image/20.jpg" alt="">
+                                       </a>
+                                   </span>
+
+                               <div class="time">
+                                   <p>2019-05-14</p>
+                               </div>
+                               <span class="design">【设计心得】</span>
+                               <div class="eassyRead">
+                                   <p>阅读更多</p>
+                               </div>
+
+                           </div>
 
                        </li>
                        <div class="eassyS"></div>
@@ -340,7 +377,7 @@
 
                            <div class="eassyB" style="overflow:hidden;">
                                <div class="eassyDraw">
-                                   <img src="./image/4.jpg" alt="">
+                                   <img aa="./image/10.png" class="lazyload" alt="">
                                </div>
                                <div class="eassytText">
                                    <p>就拿我自己来说吧，有时候会很矛盾，设计好的作品，不把它分享出来，会觉得待在自己电脑里面实在是没有意义。干脆就发布出去吧。
@@ -360,41 +397,7 @@
                                    <p>阅读更多</p>
                                </div>
 
-                           </div>
-
-                       </li>
-                       <div class="eassyS"></div>
-                       <li class="essay">
-                           <div class="eassyT">
-                               <a  href="">
-                                   <b>【顶】</b>
-                                   <p>别让这些闹心的套路，毁了你的网页设计!</p>
-                               </a>
-                           </div>
-
-                           <div class="eassyB" style="overflow:hidden;">
-                               <div class="eassyDraw">
-                                   <img src="./image/6.jpg" alt="">
-                               </div>
-                               <div class="eassytText">
-                                   <p>就拿我自己来说吧，有时候会很矛盾，设计好的作品，不把它分享出来，会觉得待在自己电脑里面实在是没有意义。干脆就发布出去吧。
-                                       我也害怕收到大家不好的评论，有些评论，可能说者无意，但是对于每一个用心的站长来说，都会受很深</p>
-                               </div>
-                               <span  class="titleP">
-                                       <a href="">
-                                           <img src="./image/20.jpg" alt="">
-                                       </a>
-                                   </span>
-
-                               <div class="time">
-                                   <p>2019-05-14</p>
-                               </div>
-                               <span class="design">【设计心得】</span>
-                               <div class="eassyRead">
-                                   <p>阅读更多</p>
-                               </div>
-
-                       </li>
+                           </div> </li>
                        <div class="eassyS"></div>
                    </ul>
                </div>
